update source and README

--- a/testing/testing.ipynb
+++ b/testing/testing.ipynb
@@ -606,6 +606,7 @@
    "source": [
     "```\n",
     "Directory structure that makes running tests easy\n",
+    "Fuente: https://medium.com/@bfortuner/python-unit-testing-with-pytest-and-mock-197499c4623c\n",
     "\n",
     "/rootdir\n",
     "  /src\n",
