order folders, update and add files

--- a/01_sintaxis/2_pep8_docstrings_vir.ipynb
+++ b/01_sintaxis/2_pep8_docstrings_vir.ipynb
@@ -177,18 +177,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from glob import glob"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "def multiplicar_por_dos(numero):\n",
-    "    \"\"\"Multiplica un número * 2.\n",
+    "    \"\"\"\n",
+    "    Multiplica un número * 2.\n",
     "    \n",
     "    Necesario asegurarse de que el parámetro numero es un entero.\n",
-    "    \n",
     "    \"\"\"\n",
     "\n",
     "    return numero * 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Help on function multiplicar_por_dos in module __main__:\n",
+      "\n",
+      "multiplicar_por_dos(numero)\n",
+      "    Multiplica un número * 2.\n",
+      "    \n",
+      "    Necesario asegurarse de que el parámetro numero es un entero.\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "help(multiplicar_por_dos)"
    ]
   },
   {
@@ -222,6 +254,7 @@
    "source": [
     "## NO ##\n",
     "\n",
+    "\n",
     "def mi_funcion(lista_numeros):\n",
     "    lista_sum = 0\n",
     "    for numero in lista_numeros:\n",
@@ -237,6 +270,7 @@
    "outputs": [],
    "source": [
     "## SI ##\n",
+    "\n",
     "\n",
     "def mi_funcion(lista_numeros):\n",
     "\n",
@@ -287,6 +321,7 @@
     "    debug: bool = False\n",
     "):\n",
     "    \"\"\"Applies `variables` to the `template` and writes to `file`.\"\"\"\n",
+    "    \n",
     "    with open(file, \"w\") as f:\n",
     "        pass"
    ]
@@ -333,7 +368,7 @@
     "def very_important_function(\n",
     "    template: str,\n",
     "    *variables,\n",
-    "    file: os.PathLike,   # comentario inline\n",
+    "    file: os.PathLike,  # comentario inline\n",
     "    engine: str,\n",
     "    header: bool = True,\n",
     "    debug: bool = False\n",
@@ -341,7 +376,7 @@
     "    \"\"\"Applies `variables` to the `template` and writes to `file`.\"\"\"\n",
     "    # comentario de linea\n",
     "    with open(file, \"w\") as f:\n",
-    "        \n",
+    "\n",
     "        # comentario de\n",
     "        # bloque\n",
     "        # en varias lineas\n",
@@ -351,9 +386,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "basic",
+   "display_name": "teach",
    "language": "python",
-   "name": "basic"
+   "name": "teach"
   },
   "language_info": {
    "codemirror_mode": {
@@ -365,7 +400,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7"
+   "version": "3.7.8"
   }
  },
  "nbformat": 4,
