--- a/02_json-yaml/2_json_yaml.ipynb
+++ b/02_json-yaml/2_json_yaml.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,6 +65,33 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ordenadores = persona[\"ordenadores\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ordenador_0 = ordenadores[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "modelo_0 = ordenador_0[\"modelo\"]"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -73,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -82,7 +109,7 @@
        "'macbook'"
       ]
      },
-     "execution_count": null,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -111,7 +138,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "str_json = json.dumps(persona)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -123,7 +159,6 @@
     }
    ],
    "source": [
-    "str_json = json.dumps(persona)\n",
     "print(str_json)"
    ]
   },
@@ -248,7 +283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -264,7 +299,7 @@
        "  {'modelo': 'imac', 'versionpython': 3.8}]}"
       ]
      },
-     "execution_count": null,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -283,7 +318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -293,12 +328,67 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "66.1 µs ± 3.04 µs per loop (mean ± std. dev. of 7 runs, 10000 loops each)\n"
+     ]
+    }
+   ],
    "source": [
     "with open(\"jsondata.json\", \"r\") as archivo:\n",
-    "    datos = archivo.read()"
+    "    datos = archivo.read()\n",
+    "    a = json.loads(datos)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "78.1 µs ± 6.9 µs per loop (mean ± std. dev. of 7 runs, 1000 loops each)\n"
+     ]
+    }
+   ],
+   "source": [
+    "with open(\"jsondata.json\", \"r\") as archivo:\n",
+    "\n",
+    "    a = json.load(archivo)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'nombre': 'oriol',\n",
+       " 'edad': 28,\n",
+       " 'casado': True,\n",
+       " 'divorciado': False,\n",
+       " 'hijos': ['ricardito', 'ian'],\n",
+       " 'mascotas': None,\n",
+       " 'ordenadores': [{'modelo': 'macbook', 'versionpython': 3.7},\n",
+       "  {'modelo': 'imac', 'versionpython': 3.8}]}"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "json.loads(datos)"
    ]
   },
   {
@@ -310,12 +400,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
     "with open(\"json2.json\", \"w\") as archivo:\n",
     "    json.dump(persona, archivo)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open(\"jsondata.json\", \"r\") as f:\n",
+    "    data = json.load(f)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'nombre': 'oriol',\n",
+       " 'edad': 28,\n",
+       " 'casado': True,\n",
+       " 'divorciado': False,\n",
+       " 'hijos': ['ricardito', 'ian'],\n",
+       " 'mascotas': None,\n",
+       " 'ordenadores': [{'modelo': 'macbook', 'versionpython': 3.7},\n",
+       "  {'modelo': 'imac', 'versionpython': 3.8}]}"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data"
    ]
   },
   {
@@ -682,9 +809,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "basic",
+   "display_name": "teach",
    "language": "python",
-   "name": "basic"
+   "name": "teach"
   },
   "language_info": {
    "codemirror_mode": {
@@ -696,7 +823,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7"
+   "version": "3.7.8"
   }
  },
  "nbformat": 4,
