--- a/01_sintaxis/1_sintaxis.ipynb
+++ b/01_sintaxis/1_sintaxis.ipynb
@@ -89,11 +89,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "mitexto = \"estamos en el curso de python\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'mitexto'"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\"mitexto\""
    ]
   },
   {
@@ -2028,13 +2048,6 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "significado = {\"codi_gmb\": \"codigo de noseque\"}"
    ]
@@ -2745,7 +2758,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2761,7 +2774,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -2778,7 +2791,7 @@
        "3"
       ]
      },
-     "execution_count": null,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3005,7 +3018,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3145,7 +3158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -3153,34 +3166,34 @@
       "text/plain": [
        "['&',\n",
        " '(CWI)',\n",
-       " '1980s[34]',\n",
        " 'ABC',\n",
-       " 'Centrum',\n",
-       " 'Guido',\n",
+       " '1980s[34]',\n",
        " 'Informatica',\n",
-       " 'Netherlands',\n",
-       " 'Python',\n",
-       " 'Rossum',\n",
-       " 'Wiskunde',\n",
        " 'a',\n",
+       " 'conceived',\n",
+       " 'the',\n",
+       " 'late',\n",
+       " 'Wiskunde',\n",
+       " 'the',\n",
+       " 'the',\n",
+       " 'language',\n",
+       " 'Rossum',\n",
+       " 'Centrum',\n",
+       " 'Python',\n",
+       " 'in',\n",
+       " 'van',\n",
+       " 'in',\n",
+       " 'Guido',\n",
+       " 'to',\n",
+       " 'successor',\n",
+       " 'was',\n",
+       " 'Netherlands',\n",
        " 'as',\n",
        " 'at',\n",
-       " 'by',\n",
-       " 'conceived',\n",
-       " 'in',\n",
-       " 'in',\n",
-       " 'language',\n",
-       " 'late',\n",
-       " 'successor',\n",
-       " 'the',\n",
-       " 'the',\n",
-       " 'the',\n",
-       " 'to',\n",
-       " 'van',\n",
-       " 'was']"
+       " 'by']"
       ]
      },
-     "execution_count": null,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
