--- a/02_json-yaml/2_json_yaml.ipynb
+++ b/02_json-yaml/2_json_yaml.ipynb
@@ -463,7 +463,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -472,32 +472,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open(\"items.yml\") as f:\n",
+    "with open(\"items.yaml\") as f:\n",
     "    \n",
     "    items = yaml.load(f, Loader=yaml.FullLoader)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'raincoat': 1,\n",
-       " 'coins': 5,\n",
-       " 'books': 23,\n",
-       " 'spectacles': 2,\n",
-       " 'chairs': 12,\n",
-       " 'pens': 6}"
+       "{'chubasquero': 1,\n",
+       " 'monedas': 5,\n",
+       " 'libros': 23,\n",
+       " 'espectaculos': 2,\n",
+       " 'sillas': 12,\n",
+       " 'bolis': 6}"
       ]
      },
-     "execution_count": null,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -515,32 +515,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open(\"items.yml\") as f:\n",
+    "with open(\"items.yaml\") as f:\n",
     "\n",
     "    items = yaml.full_load(f)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'raincoat': 1,\n",
-       " 'coins': 5,\n",
-       " 'books': 23,\n",
-       " 'spectacles': 2,\n",
-       " 'chairs': 12,\n",
-       " 'pens': 6}"
+       "{'chubasquero': 1,\n",
+       " 'monedas': 5,\n",
+       " 'libros': 23,\n",
+       " 'espectaculos': 2,\n",
+       " 'sillas': 12,\n",
+       " 'bolis': 6}"
       ]
      },
-     "execution_count": null,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -562,13 +562,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open(\"items.yml\") as f:\n",
+    "with open(\"items.yaml\") as f:\n",
     "\n",
     "    items = yaml.safe_load(f)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'chubasquero': 1,\n",
+       " 'monedas': 5,\n",
+       " 'libros': 23,\n",
+       " 'espectaculos': 2,\n",
+       " 'sillas': 12,\n",
+       " 'bolis': 6}"
+      ]
+     },
+     "execution_count": 49,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "items"
    ]
   },
   {
@@ -589,25 +614,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open(\"data.yaml\") as f:\n",
+    "\n",
+    "    documentos = yaml.full_load_all(f)\n",
+    "    documentos = [doc for doc in documentos]\n",
+    "    \n",
+    "    # for doc in documentos:\n",
+    "    #    print(doc)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'cities': ['Bratislava', 'Kosice', 'Trnava', 'Moldava', 'Trencin']}\n",
-      "{'companies': ['Eset', 'Slovnaft', 'Duslo Sala', 'Matador Puchov']}\n"
-     ]
+     "data": {
+      "text/plain": [
+       "'Madrid'"
+      ]
+     },
+     "execution_count": 65,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "with open(\"data.yaml\") as f:\n",
-    "    \n",
-    "    documentos = yaml.full_load_all(f)\n",
-    "    \n",
-    "    for doc in documentos:\n",
-    "        print(doc)"
+    "documentos[0][\"ciudades\"][3]"
    ]
   },
   {
@@ -621,7 +658,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -635,7 +672,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -646,19 +683,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [],
    "source": [
     "archivos = [\n",
     "    {\n",
-    "        \"sports\": [\n",
-    "            \"soccer\",\n",
-    "            \"football\",\n",
-    "            \"basketball\",\n",
-    "            \"cricket\",\n",
-    "            \"hockey\",\n",
-    "            \"table tennis\",\n",
+    "        \"deportes\": [\n",
+    "            \"rugby\",\n",
+    "            \"futbol\",\n",
+    "            \"baloncesto\",\n",
+    "            \"natacion\",\n",
+    "            \"wushu\",\n",
+    "            \"tenis\",\n",
     "        ]\n",
     "    },\n",
     "    {\"countries\": [\"Pakistan\", \"USA\", \"India\", \"China\", \"Germany\", \"France\", \"Spain\"]},\n",
@@ -667,12 +704,122 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 72,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'deportes': ['rugby', 'futbol', 'baloncesto', 'natacion', 'wushu', 'tenis']},\n",
+       " {'countries': ['Pakistan',\n",
+       "   'USA',\n",
+       "   'India',\n",
+       "   'China',\n",
+       "   'Germany',\n",
+       "   'France',\n",
+       "   'Spain']}]"
+      ]
+     },
+     "execution_count": 72,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "archivos"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open(\"archivo.yaml\", \"w\") as file:\n",
+    "with open(\"archivos.yaml\", \"w\") as file:\n",
     "    yaml.dump(archivos, file)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open(\"docker-compose.yml\") as f:\n",
+    "\n",
+    "    docker_config = yaml.safe_load(f)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 87,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# lista_puertos = docker_config[\"services\"][\"api\"][\"ports\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 85,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "docker_config_nueva = docker_config.copy()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 88,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "docker_config_nueva[\"services\"][\"api\"][\"ports\"] = [\"8080:8080\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 89,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'version': '3.3',\n",
+       " 'services': {'redis': {'image': 'redis:alpine'},\n",
+       "  'api': {'ports': ['8080:8080'],\n",
+       "   'build': {'context': './backend', 'dockerfile': 'backend.dockerfile'},\n",
+       "   'volumes': ['/usr/local/share/db/.:/home/appuser/db/'],\n",
+       "   'depends_on': ['redis'],\n",
+       "   'env_file': ['env-postgres.env', 'env-backend.env']},\n",
+       "  'frontend': {'ports': ['3000:3000'],\n",
+       "   'image': '${DOCKER_IMAGE_FRONTEND}:${TAG-latest}',\n",
+       "   'build': {'context': './frontend', 'dockerfile': 'Dockerfile'},\n",
+       "   'depends_on': ['api']}}}"
+      ]
+     },
+     "execution_count": 89,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "docker_config_nueva"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 93,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open(\"docker_updated.yaml\", \"w\") as archivo_config_docker:\n",
+    "\n",
+    "    yaml.dump(\n",
+    "        docker_config_nueva,\n",
+    "        archivo_config_docker,\n",
+    "        # sort_keys=False,\n",
+    "    )"
    ]
   },
   {
@@ -690,7 +837,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -713,7 +860,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 111,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -723,65 +870,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 112,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'key': 'value',\n",
-       " 'another_key': 'Another value goes here.',\n",
-       " 'a_number_value': 100,\n",
-       " 'scientific_notation': '1e+12',\n",
-       " 'boolean': True,\n",
-       " 'null_value': None,\n",
-       " 'key with spaces': 'value',\n",
-       " 'however': 'A string, enclosed in quotes.',\n",
-       " 'Keys can be quoted too.': \"Useful if you want to put a ':' in your key.\",\n",
-       " 'single quotes': \"have 'one' escape pattern\",\n",
-       " 'double quotes': 'have many: \", \\x00, \\t, ☺, \\r\\n == \\r\\n, and more.',\n",
-       " 'Superscript two': '\\\\u00B2',\n",
-       " 'literal_block': \"This entire block of text will be the value of the 'literal_block' key,\\nwith line breaks being preserved.\\n\\nThe literal continues until de-dented, and the leading indentation is\\nstripped.\\n\\n    Any lines that are 'more-indented' keep the rest of their indentation -\\n    these lines will be indented by 4 spaces.\\n\",\n",
-       " 'folded_style': \"This entire block of text will be the value of 'folded_style', but this time, all newlines will be replaced with a single space.\\nBlank lines, like above, are converted to a newline character.\\n\\n    'More-indented' lines keep their newlines, too -\\n    this text will appear over two lines.\\n\",\n",
-       " 'a_nested_map': {'key': 'value',\n",
-       "  'another_key': 'Another Value',\n",
-       "  'another_nested_map': {'hello': 'hello'}},\n",
-       " 0.25: 'a float key',\n",
-       " 'This is a key\\nthat has multiple lines\\n': 'and this is its value',\n",
-       " 'a_sequence': ['Item 1',\n",
-       "  'Item 2',\n",
-       "  0.5,\n",
-       "  'Item 4',\n",
-       "  {'key': 'value', 'another_key': 'another_value'},\n",
-       "  ['This is a sequence', 'inside another sequence'],\n",
-       "  [['Nested sequence indicators', 'can be collapsed']]],\n",
-       " 'json_map': {'key': 'value'},\n",
-       " 'json_seq': [3, 2, 1, 'takeoff'],\n",
-       " 'and quotes are optional': {'key': [3, 2, 1, 'takeoff']},\n",
-       " 'anchored_content': 'This string will appear as the value of two keys.',\n",
-       " 'other_anchor': 'This string will appear as the value of two keys.',\n",
-       " 'base': {'name': 'Everyone has same name'},\n",
-       " 'foo': {'name': 'Everyone has same name', 'age': 10},\n",
-       " 'bar': {'name': 'Everyone has same name', 'age': 20},\n",
-       " 'explicit_string': '0.5',\n",
-       " 'python_complex_number': (1+2j),\n",
-       " (5, 7): 'Fifty Seven',\n",
-       " 'datetime': datetime.datetime(2001, 12, 15, 2, 59, 43, 100000, tzinfo=datetime.timezone.utc),\n",
-       " 'datetime_with_spaces': datetime.datetime(2001, 12, 14, 21, 59, 43, 100000, tzinfo=datetime.timezone(datetime.timedelta(days=-1, seconds=68400))),\n",
-       " 'date': datetime.date(2002, 12, 14),\n",
-       " 'gif_file': b\"GIF89a\\x0c\\x00\\x0c\\x00\\x84\\x00\\x00\\xff\\xff\\xf7\\xf5\\xf5\\xee\\xe9\\xe9\\xe5fff\\x00\\x00\\x00\\xe7\\xe7\\xe7^^^\\xf3\\xf3\\xed\\x8e\\x8e\\x8e\\xe0\\xe0\\xe0\\x9f\\x9f\\x9f\\x93\\x93\\x93\\xa7\\xa7\\xa7\\x9e\\x9e\\x9eiiiccc\\xa3\\xa3\\xa3\\x84\\x84\\x84\\xff\\xfe\\xf9\\xff\\xfe\\xf9\\xff\\xfe\\xf9\\xff\\xfe\\xf9\\xff\\xfe\\xf9\\xff\\xfe\\xf9\\xff\\xfe\\xf9\\xff\\xfe\\xf9\\xff\\xfe\\xf9\\xff\\xfe\\xf9\\xff\\xfe\\xf9\\xff\\xfe\\xf9\\xff\\xfe\\xf9\\xff\\xfe\\xf9!\\xfe\\x0eMade with GIMP\\x00,\\x00\\x00\\x00\\x00\\x0c\\x00\\x0c\\x00\\x00\\x05,  \\x8e\\x810\\x9e\\xe3@\\x14\\xe8i\\x10\\xc4\\xd1\\x8a\\x08\\x1c\\xcf\\x80M$z\\xef\\xff0\\x85p\\xb8\\xb01f\\r\\x1b\\xce\\x01\\xc3\\x01\\x1e\\x10' \\x82\\n\\x01\\x00;\",\n",
-       " 'set': {'item1': None, 'item2': None, 'item3': None},\n",
-       " 'or': {'item1': None, 'item2': None, 'item3': None},\n",
-       " 'set2': {'item1': None, 'item2': None, 'item3': None}}"
-      ]
-     },
-     "execution_count": null,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "full"
+    "# with open(\"full.yaml\", \"r\") as f:\n",
+    "#     full = yaml.safe_load(f)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 104,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "datos_bytes = full[\"gif_file\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 105,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open(\"prueba.gif\", \"wb\") as f:\n",
+    "    f.write(datos_bytes)"
    ]
   },
   {
